# Semantic_Caching_MVR

./: .gitignore  README.md
RL_SemanticCashing_128/: AdaptedPointerNetworkPolicy.py  MaxSimEnv.py  MaxSimGenerator.py  RL4COTrainer.py  embedding_model.py  inspect_punctuation_cases.py  make_balanced_pairs.py  test.ipynb  version_10_training_results.txt
RL_SemanticCashing_128/scripts/: checkpoint_smoketest.py
RL_SemanticCashing_768/: AdaptedPointerNetworkPolicy.py  MaxSimEnv.py  MaxSimGenerator.py  RL4COTrainer.py  embedding_model.py  inspect_punctuation_cases.py
RL_SemanticCashing_768/scripts/: check_prompt_punct_print.py  read_semantic_cache_dataset.py  single_text_inference.py
RL_SemanticCashing_768_new/: AdaptedPointerNetworkPolicy.py  MaxSimEnv.py  MaxSimGenerator.py  RL4COTrainer.py  embedding_model.py  inspect_punctuation_cases.out.txt  similarity_evaluator.py  version_12_results.txt
RL_SemanticCashing_768_new/scripts/: checkpoint_smoketest.py  eval_testset_report.py  sample_lmarena_subset.py
vcache/: config.py  eval_sembenchmark_verified_splitter.py.lprof  model.py  test.ipynb  test.py
vcache/benchmarks/: benchmark.py  eval_sembenchmark_verified_splitter.py  line_profile_verified_splitter.py  run_single_benchmark.py
vcache/inference_engine/: __init__.py
vcache/playground/: example_1.py
vcache/results/: line_profile_verified_splitter_cuda_after.txt  line_profile_verified_splitter_cuda_after_match.txt  line_profile_verified_splitter_cuda_after_rl_match.txt
vcache_128/: eval_sembenchmark_verified.py.lprof
vcache_128/benchmarks/: debug_splitter_segments.py  (+1 more)
vcache_Multi_HNSW/: .gitignore  pyproject.toml
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/: CMakeLists.txt  diagnose_binary.py  find_factors.py  hnsw_multi_vec_flat_read_query.py  pyproject.toml  read_binary_results.py  setup.py  similarity_reader.py  test.ipynb  test2.ipynb
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/evaluation/: clef_gt.npy  clerc_gt.npy  delta.ipynb  eva.md  evaluate.ipynb  evaluate.py  evaluate_128.ipynb  evaluate_connectivity.ipynb  evaluate_dimension.ipynb  evaluate_prof.ipynb  multiqa_gt.npy  results.csv  results_128.csv  results_128_new.csv  results_MVRHNSW.csv  results_connectivity.csv  results_dimension.csv
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/evaluation/ground-truth/openai1M/: gt.npy
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/evaluation/result/: multi-hnsw.tsv  plaid.tsv
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/examples/cpp/: example_epsilon_search.cpp  example_filter.cpp  example_mt_filter.cpp  example_mt_replace_deleted.cpp  example_mt_search.cpp  example_multivector_search.cpp  example_replace_deleted.cpp  example_search.cpp
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/hnswlib/: IO.hpp  bruteforce.h  define.hpp  hnswalg.h  hnswlib.h  space_ip.h
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/python_bindings/: bindings.cpp
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/results/: clerc-128-small-multi_hnsw-raw.csv  clerc-large-multi_hnsw-half-qps.csv  clerc-large-multi_hnsw-raw.csv  clerc-large-single_hnsw-raw-single.csv  clerc-large-single_hnsw-single.csv  multiqa-med-multi_hnsw-half-qps.csv  multiqa-med-multi_hnsw-raw_k.csv  tripclick-multi_hnsw-half-qps.csv
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/tests/cpp/: epsilon_search_test.cpp  multiThreadLoad_test.cpp  multiThread_replace_test.cpp  multivector_search.cpp  multivector_search_efficient.cpp  multivector_search_efficientpost.cpp  multivector_search_efficientpost_approx.cpp  multivector_search_efficientpost_approx_dynamic.cpp  multivector_search_nihcc.cpp  multivector_search_parallel.cpp  multivector_search_parallel_image.cpp  multivector_search_parallel_inner.cpp  multivector_search_parallel_inner_k.cpp  multivector_search_radiology.cpp  multivector_search_self.cpp  multivector_search_skippingnodes.cpp  multivector_search_skippingnodes_nihcc.cpp  multivector_search_skippingnodes_query.cpp  multivector_search_test.cpp  raw.cpp  raw_nihcc.cpp  raw_single.cpp  searchKnnCloserFirst_test.cpp  searchKnnWithFilter_test.cpp  sift_1b.cpp  sift_test.cpp  singlevector_search.cpp  singlevector_search_nihcc.cpp  test.cpp  test_cluster.cpp  updates_test.cpp
vcache_Multi_HNSW/vcache/vcache_core/cache/embedding_store/hnswlib/tests/python/: multivector_search_parallel_inner.py
vcache_v2/: CONTRIBUTING.md
vcahce/: README.md  pyproject.toml
(+88 files in other folders)
